# support-agent-ai

./: .gitignore  README.md  pyproject.toml
data/knowledge_base/: account.md  payments.md  products.md  returns.md  shipping.md
docs/: 00-roadmap.md  phase-0-foundations.md  phase-1-rag.md  phase-10-interview-readiness.md  phase-2-context-memory.md  phase-3-orchestration.md  phase-4-system-design.md  phase-5-evals.md  phase-6-observability.md  phase-7-cost-latency.md  phase-8-reliability.md  phase-9-security.md
examples/: phase0_hello_claude.py  phase1_eval_retrieval.py  phase1_rag.py  phase2_memory.py  phase2_prompt_caching.py  phase3_agent.py  phase4_client.py  phase5_eval.py  phase6_observability.py  phase7_cost_latency.py  phase8_reliability.py  phase9_security.py
src/support_agent/: __init__.py  config.py  llm.py
src/support_agent/agent/: __init__.py  agent_session.py  graph.py  tools.py
src/support_agent/eval/: __init__.py  cases.py  judge.py  metrics.py  runner.py
src/support_agent/memory/: __init__.py  context.py  conversation.py  session.py  store.py  summarizer.py
src/support_agent/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/support_agent/optimization/: __init__.py  router.py
src/support_agent/rag/: __init__.py  documents.py  embeddings.py  evaluation.py  retriever.py  vector_store.py
src/support_agent/reliability/: __init__.py  circuit_breaker.py  resilient.py  retry.py
src/support_agent/security/: __init__.py  authz.py  guardrails.py  (+1 more)
tests/: test_eval_quality.py
tests/eval/: answer_quality.json  retrieval_qa.json
(+5 files in other folders)
