[project]
name = "support-agent"
version = "0.1.0"
description = "A production-grade AI customer support system, built to learn production AI engineering."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",      # Claude SDK
    "pydantic>=2.7",        # typed settings & data models
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",   # load .env in local dev
    "numpy>=1.26",          # vector math for the RAG store (Phase 1)
    "voyageai>=0.3",        # production embeddings + reranking (Phase 1)
    "langgraph>=0.2",       # agent orchestration state machine (Phase 3)
    "fastapi>=0.110",       # the HTTP service (Phase 4)
    "uvicorn>=0.29",        # ASGI server to run the FastAPI app (Phase 4)
    "httpx>=0.27",          # HTTP client for examples/tests (Phase 4)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
